--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,3 @@
-<h1 class="mt-4">Anasayfa</h1>
-<p class="lead mb-3">Hosgeldinn <%= user.name %></p>
-<a href="/users/logout" class="btn btn-secondary">Çıkış yap</a>
+<h1 class="mt-4">Dashboard</h1>
+<p class="lead mb-3">Welcome <%= user.name %></p>
+<a href="/users/logout" class="btn btn-secondary">Logout</a>
